<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hassle_tab_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/players_list_background">

        <LinearLayout
            android:id="@+id/menu_list_cmd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:fontFamily="@font/montserrat_bolditalic"
                    android:text="@string/players_list_header_dialog"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />

                <TextView
                    android:id="@+id/players_list_value_players"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/players_list_bg_value_players"
                    android:fontFamily="@font/montserrat_bolditalic"
                    android:gravity="center"
                    android:shadowColor="#33383838"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="1000/1000"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <RelativeLayout
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="2">

                        <EditText
                            android:id="@+id/search_view"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/players_list_border_search"
                            android:fontFamily="@font/sqaure_studio"
                            android:hint="@string/players_list_search_hint"
                            android:imeOptions="actionGo|actionSend|actionDone|flagNoFullscreen|flagNoExtractUi"
                            android:inputType="text"
                            android:paddingStart="@dimen/_10sdp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/progress_gray"
                            android:textSize="@dimen/_15sdp" />

                        <ImageView
                            android:id="@+id/icon_clear_search_text"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_alignTop="@+id/search_view"
                            android:layout_alignEnd="@+id/search_view"
                            android:layout_alignBottom="@+id/search_view"
                            android:layout_marginTop="-1dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="1dp"
                            android:visibility="invisible"
                            app:srcCompat="@drawable/menu_close" />

                        <ImageView
                            android:id="@+id/icon_search_view"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_alignTop="@+id/search_view"
                            android:layout_alignEnd="@+id/search_view"
                            android:layout_alignBottom="@+id/search_view"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:src="@drawable/ic_search" />
                </RelativeLayout>

                <Button
                    android:id="@+id/players_list_close"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/menu_close" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/players_list_name_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_list_cmd1"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/menu_list_cmd1">

                <TextView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sqaure_studio"
                    android:text="@string/players_list_header_first_column"
                    android:textColor="@color/progress_gray"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:fontFamily="@font/sqaure_studio"
                    android:text="@string/players_list_header_second_column"
                    android:textColor="@color/progress_gray"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sqaure_studio"
                    android:text="@string/players_list_header_third_column"
                    android:textColor="@color/progress_gray"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/sqaure_studio"
                    android:text="@string/players_list_header_fourth_column"
                    android:textColor="@color/progress_gray"
                    android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_below="@+id/players_list_name_column"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_red_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/players_list_name_column" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/players_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:layout_below="@+id/players_list_name_column"
            android:fadeScrollbars="false"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarThumbVertical="@drawable/players_list_scroll_thumb"
            android:scrollbarTrackVertical="@drawable/players_list_scroll_track"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>
